# afbenchmarking

./: CMakeLists.txt  README.md  afMatmulTest.cpp  aftests.cpp  parse_benchdnn.py  results.md  run_af.bat  run_af.sh  run_benchdnn.sh  run_benchdnn_unblock.sh
assets/: conv_dst.txt  conv_weight.txt  inner_src.txt  inner_weights.txt  matmul_weight.txt
